--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -1,25 +1,25 @@
 .profile__edit-btn {
-   width: 18px;
-   height: 18px;
-   border: 1px solid #fff;
-   background-color: transparent;
-   background-image: url(../../../images/edit.png); 
-   background-repeat: no-repeat;
-   background-position: center;
-   background-size: 7.5px 7.5px;
-   box-sizing: border-box;
-   cursor: pointer;
+  width: 18px;
+  height: 18px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  background-image: url(../../../images/edit.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 7.5px 7.5px;
+  box-sizing: border-box;
+  cursor: pointer;
 }
 
 .profile__edit-btn:hover {
-   opacity: 0.6;
-   transition: .3s;
+  opacity: 0.6;
+  transition: 0.3s;
 }
 
-@media screen and (min-width:768px) {
-       .profile__edit-btn {
-           width: 24px;
-           height: 24px;
-           background-size: 10px 10px;
-       }
+@media screen and (min-width: 768px) {
+  .profile__edit-btn {
+    width: 24px;
+    height: 24px;
+    background-size: 10px 10px;
+  }
 }
