--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,15 +1,20 @@
 .header__logo {
-    margin: 0;
-    padding: 28px 0 31.6px 27px;
-    width: 103.74px;
-    height: 24.4px;
-    color: #fff;
+  padding: 28px 0 31.6px 27px;
+  width: 103.74px;
+  height: 24.4px;
+  color: #fff;
 }
 
 @media screen and (min-width: 768px) {
-    .header__logo {
-        padding: 45px 0 41px 0;
-        width: 142px;
-        height: 33px;
-    }
+  .header__logo {
+    padding: 45px 0 41px 20px;
+    width: 142px;
+    height: 33px;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .header__logo {
+    padding-left: 0;
+  }
 }
