--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -1,27 +1,28 @@
 .popup__close-btn {
-    background-image: url(../../../images/close.png);
-    background-color: transparent;
-    border: none;
-    position: absolute;
-    top: -36px;
-    right: 0px;
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
+  width: 20px;
+  height: 20px;
+  background-image: url(../../../images/close.png);
+  background-color: transparent;
+  background-size: 20px 20px;
+  border: none;
+  position: absolute;
+  top: -36px;
+  right: 0px;
+  cursor: pointer;
 }
 
 .popup__close-btn:hover {
-    opacity: 0.6;
-    transition: .3s;
+  opacity: 0.6;
+  transition: 0.3s;
 }
 
 @media screen and (min-width: 640px) {
-    .popup__close-btn {
-        top: -40px;
-        right: -40px;
-        width: 32px;
-        height: 32px;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
+  .popup__close-btn {
+    top: -40px;
+    right: -40px;
+    width: 32px;
+    height: 32px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
