--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,12 +1,13 @@
 .profile__info {
-    margin: 0;
-    padding-bottom: 36px;
+  margin: 0;
+  padding-bottom: 36px;
 }
 
 @media screen and (min-width: 768px) {
-    .profile__info {
-        min-width: 336px;
-        padding-left: 30px;
-        padding-bottom: 25px;
-    }
+  .profile__info {
+    min-width: 336px;
+    max-width: 500px;
+    padding-left: 30px;
+    padding-bottom: 25px;
+  }
 }
