feat:like btn, add new place, delete old place

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,8 +1,10 @@
 .place {
-  margin: 0;
-  padding: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
-  grid-template-rows: auto;
-  gap: 20px 17px;
+  width: 282px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
 }
