--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,16 +1,19 @@
 .popup__form {
-    min-width: 238px;
-    padding-left: 22px;
-    padding-right: 22px;
+    width: 282px;
+    height: 322px;
+    padding: 25px 22px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    align-items: center;
+    box-sizing: border-box;
+    background: #fff;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
 }
 
 @media screen and (min-width: 640px) {
     .popup__form {
-        min-width: 358px;
-        padding-left: 36px;
-        padding-right: 36px;
+        width: 430px;
+        padding: 36px 36px 38px;
     }
 }
