--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,12 +1,11 @@
 .popup__input {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    height: 27px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  width: 100%;
+  padding: 0;
+  margin-top: 30px;
+  height: 27px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  border: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
-
