--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,15 +1,16 @@
 .popup__title {
-    margin: 0;
-    padding: 25px 0 67px 0;
-    font-weight: 900;
-    font-size: 18px;
-    line-height: 1.4;
+  margin: 0 0 45px;
+  align-self: flex-start;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 22px;
+  color: #000;
 }
 
 @media screen and (min-width: 640px) {
-    .popup__title {
-        font-size: 24px;
-        line-height: 29px;
-        padding: 34px 0 54px 36px;
-    }
+  .popup__title {
+    font-size: 24px;
+    line-height: 29px;
+    margin: 0 0 24px;
+  }
 }
