--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,6 @@
 .popup__input {
   width: 100%;
-  padding: 0;
-  margin-top: 30px;
+  padding-bottom: 10px;
   height: 27px;
   font-weight: 400;
   font-size: 14px;
