--- a/blocks/popup/__save-btn/popup__save-btn.css
+++ b/blocks/popup/__save-btn/popup__save-btn.css
@@ -1,14 +1,15 @@
 .popup__save-btn {
   width: 100%;
-  margin: 45px 0 25px 0;
-  padding: 14px;
+  min-height: 50.15px;
+  margin-top: 10px;
+  padding: 0;
   background: #000;
   border-radius: 2px;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
   color: #fff;
-  border: none;
+  border: 0;
   cursor: pointer;
 }
 
@@ -19,7 +20,7 @@
 
 @media screen and (min-width: 640px) {
   .popup__save-btn {
-    margin: 48px 0 37px 0;
+    margin-top: 13px;
     font-size: 18px;
     line-height: 22px;
   }
