--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,5 +1,6 @@
 .popup__title {
-  margin: 0 0 45px;
+  margin: 0;
+  padding-bottom: 75px;
   align-self: flex-start;
   font-weight: 900;
   font-size: 18px;
@@ -11,6 +12,6 @@
   .popup__title {
     font-size: 24px;
     line-height: 29px;
-    margin: 0 0 24px;
+    padding-bottom: 54px;
   }
 }
