--- a/pages/index.css
+++ b/pages/index.css
@@ -26,7 +26,10 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
 @import url(../blocks/popup/__save-btn/popup__save-btn.css);
+@import url(../blocks/popup/__save-btn/_disabled/popup__save-btn_disabled.css);
 @import url(../blocks/popup/_active/popup_active.css);
 @import url(../blocks/popup/__show-img/popup__show-img.css);
 @import url(../blocks/popup/__place-description/popup__place-description.css);
