--- a/blocks/popup/__save-btn/_disabled/popup__save-btn_disabled.css
+++ b/blocks/popup/__save-btn/_disabled/popup__save-btn_disabled.css
@@ -1,8 +1,8 @@
 .popup__save-btn_disabled {
-    color: #000;
-    background-color: #e5e5e5;
-    border: 1px solid #000;
-    border-radius: 2px;
-    opacity: .2;
-    transition: none;
-}; 
+  color: #000;
+  background-color: #e5e5e5;
+  border: 1px solid #000;
+  border-radius: 2px;
+  opacity: 0.2;
+  transition: none;
+}
