--- a/blocks/place/__img/place__img.css
+++ b/blocks/place/__img/place__img.css
@@ -1,6 +1,11 @@
 .place__img {
-    width: 100%;
-    height: 282px;
-    object-fit: cover;
-    border-radius: 10px 10px 0 0;
+  width: 100%;
+  height: 282px;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+}
+
+.place__img:hover {
+  opacity: 0.6;
+  transition: 0.3s;
 }
